external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_valid/basic_with_bar/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
---
Err(TOML parse error at line 20, column 1
   |
20 | [dep-overrides.mainnet.foo]
   | ^
Duplicate key `foo` in table `dep-overrides.mainnet`

While parsing a Table Header
)
